@@ -12,7 +12,7 @@ Vue.component('lms-ui-settings', {
   <v-card-title class="settings-title">
    <v-toolbar color="primary" dark app class="lms-toolbar">
     <v-btn flat icon @click.native="close"><v-icon>arrow_back</b-icon></v-btn>
-    <v-toolbar-title>{{i18n('Settings')}}</v-toolbar-title>
+    <v-toolbar-title>{{TB_UI_SETTINGS.title}}</v-toolbar-title>
    </v-toolbar>
   </v-card-title>
   <v-card-text>
